--- a/style.scss
+++ b/style.scss
@@ -6,9 +6,9 @@
   padding: 0;
 }
 
-// body {
-//   background-color: #000;
-// }
+body {
+  background-color: #000;
+}
 
 .container-fluid {
   width: 1560px;
